[tool.poetry]
name = "Dofutils"
version = "0.0.4"
description = "Collection of useful things to build Dofus Retro bot or emulator"
keywords = ["dofus retro", "dofus", "retro", "bot", "emulateur"]
authors = ["Dysta"]
readme = "README.md"
repository = "https://github.com/Dysta/Dofutils"
exclude = ["tests", "tests.*"]
classifiers = [
        #   3 - Alpha
        #   4 - Beta
        #   5 - Production/Stable
        'Development Status :: 3 - Alpha'
    ]

[tool.poetry.dependencies]
python = ">=3.8, <4.0"

[tool.poetry.scripts]
tests = "scripts:tests"
fmt = "scripts:fmt"
tcheck = "scripts:type_check"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.11.0"
black = "^23.3.0"
mypy = "^1.3.0"
autoflake = "^2.1.1"
isort = "^5.12.0"

[tool.taskipy.tasks]
test = { cmd = "python -m unittest discover -v", help = "run all the tests" }
lint = { cmd = "python -m black .", help = "formate the code using black" }
clean = { cmd = "python -m autoflake . -r -i -v --ignore-init-module-imports --remove-all-unused-imports --remove-unused-variables", help = "remove unused code/import/variable" }
check = { cmd = "python -m mypy .", help = "type check the lib with mypy" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
